Change material properties

--- a/FinalProject/imgui.ini
+++ b/FinalProject/imgui.ini
@@ -16,6 +16,10 @@ Pos=95,17
 Size=550,680
 
 [Window][Bloom]
-Pos=1550,217
+Pos=1516,219
 Size=256,99
+
+[Window][Color correction]
+Pos=1552,351
+Size=228,110
 
